Filling in a few more FIXME markers

--- a/book.bib
+++ b/book.bib
@@ -79,8 +79,8 @@
 }
 
 @book{bib:epstein-thinking-physics,
-  title={Thinking Physics is Gedanken Physics},
   author={L.C. Epstein},
+  title={Thinking Physics is Gedanken Physics},
   isbn={9780935218084},
   year={2002},
   publisher={Insight Press},
@@ -143,8 +143,8 @@
 }
 
 @book{bib:green-babt,
+  author={E. Green},
   title={Building a Better Teacher: How Teaching Works (and How to Teach It to Everyone)},
-  author={Green, E.},
   isbn={9780393244151},
   year={2014},
   publisher={W. W. Norton},
@@ -184,17 +184,17 @@
 }
 
 @article{bib:henderson-facilitating,
-  author = {Charles Henderson and Andrea Beach and Noah Finkelstein},
-  title = {Facilitating change in undergraduate STEM instructional practices: An analytic review of the literature},
-  journal = {Journal of Research in Science Teaching},
-  volume = {48},
-  number = {8},
-  publisher = {Wiley},
-  issn = {1098-2736},
-  url = {http://dx.doi.org/10.1002/tea.20439},
-  doi = {10.1002/tea.20439},
-  pages = {952--984},
-  year = {2011},
+  author={Charles Henderson and Andrea Beach and Noah Finkelstein},
+  title={Facilitating change in undergraduate STEM instructional practices: An analytic review of the literature},
+  journal={Journal of Research in Science Teaching},
+  volume={48},
+  number={8},
+  publisher={Wiley},
+  issn={1098-2736},
+  url={http://dx.doi.org/10.1002/tea.20439},
+  doi={10.1002/tea.20439},
+  pages={952--984},
+  year={2011},
   annotate={Describes eight approaches to effecting change in STEM education that
     form a useful framework for thinking about how free-range workshops can go
     mainstream.}
@@ -384,6 +384,15 @@
     there is no ``geek gene''.}
 }
 
+@book{bib:petre-expertise,
+  author={Marian Petre and Andr\'{e} van der Hoek and Yen Quach},
+  title={Software Design Decoded: 66 Ways Experts Think},
+  publisher={MIT Press},
+  year={2016},
+  isbn={978-0262035187},
+  annotate={A short illustrated overview of how expert software developers think.}
+}
+
 @article{bib:porter-what-works,
   author={Leo Porter and Mark Guzdial and Charlie McDowell and Beth Simon},
   title={Success in Introductory Programming: What Works?},
@@ -420,6 +429,15 @@
   annotate={An introduction to Unix that is both a good tutorial and a good reference guide.}
 }
 
+@book{bib:schon-practitioner,
+  author={Donad A. Sch{\"o}n},
+  title={The Reflective Practitioner: How Professionals Think In Action},
+  publisher={Basic Books},
+  year={1984},
+  isbn={978-0465068784},
+  annotate={A groundbreaking look at how professionals in different fields actually solve problems.}
+}
+
 @book{bib:scott-state,
   title={Seeing Like a State: How Certain Schemes to Improve the Human Condition Have Failed},
   author={Scott, J.C.},
@@ -451,8 +469,8 @@
 }
 
 @book{bib:wiggins-mctighe,
-  title={Understanding by Design},
   author={G.P. Wiggins and J. McTighe},
+  title={Understanding by Design},
   isbn={9781416600350},
   year={2005},
   publisher={Association for Supervision and Curriculum Development},
