--- a/novice.tex
+++ b/novice.tex
@@ -52,9 +52,9 @@ differently.  In particular, presenting novices with a pile of facts
 early on is counter-productive, because they don't yet have a model to
 fit those facts into\footnote{In fact, presenting too many facts too
 soon can actually reinforce the incorrect mental model they've cobbled
-together \cite{fixme}.}. Instead, the goal with novices is \emph{to
-help them construct a working mental model} so that they have
-somewhere to put facts.
+together.}. Instead, the goal with novices is \emph{to help them
+construct a working mental model} so that they have somewhere to put
+facts.
 
 As an example of what this means in practice, Software Carpentry's
 \href{http://swcarpentry.github.io/shell-novice/}{lesson on the Unix
@@ -334,7 +334,8 @@ their point of view.
 
 \seclbl{Teaching Practices}{sec:novice-practices}
 
-\fixme{intro to teaching practices}
+Here are two more teaching practices that you can incorporate into
+any class (not just one on programming).
 
 \subseclbl{Sticky Notes}{sec:sticky-notes}
 
@@ -419,8 +420,8 @@ where they are and what they need to do next.
 \begin{challenge}{Icebergs}{chal:novice-iceberg}
 
 An example of how solving problems can help people correct broken
-mental models, consider this problem
-from \cite{bib:epstein-thinking-physics}.  Imagine that you have
+mental models, consider this problem from
+\cite{bib:epstein-thinking-physics}.  Imagine that you have
 placed a cake of ice in a bathtub and then filled the tub to the rim
 with water. When the ice melts, does the water level go up (so that
 the tub overflows), go down, or stay the same?
