--- a/performance.tex
+++ b/performance.tex
@@ -190,8 +190,6 @@ keyboard shortcuts in R Studio. Live coding makes this much more
 likely because it allows learners to see the ``how'' as well as the
 ``what''.
 
-\fixme{how jugyokenkyu figures into our teaching}
-
 \seclbl{Feedback}{sec:feedback}
 
 \figlbl{Feedback Feelings}{fig:jerk}{fig/deathbulge-jerk.jpg}
@@ -241,8 +239,14 @@ There are several things you can do to make feedback more effective:
 \item
   Most importantly, \emph{be kind to yourself}.  Many of us are very
   critical of ourselves, so it's always helpful to jot down what we
-  thought of ourselves \emph{before} getting feedback from others,
-  so that \fixme{normalize}.
+  thought of ourselves \emph{before} getting feedback from others.
+  That allows us to compare what we think of our performance with what
+  others think, which in turn allows us to scale the former more
+  accurately.  For example, it's very common for people to think that
+  they're saying ``um'' and ``err'' all the time, when their audience
+  doesn't notice it.  Getting that feedback once allows instructors to
+  adjust their assessment of themselves the next time they feel that
+  way.
 
 \end{genumerate}
 
@@ -254,6 +258,19 @@ how it was said.  Even this little bit of structure helps people
 figure out what to say, and to separate those who have good ideas that
 they can't communicate from those who are eloquent but don't actually
 have anything to say.
+
+\begin{callout}{Studio Classes}{callout:studio-classes}
+
+Architecture schools often include studio classes, in which students
+solve small design problems and get feedback from their peers right
+then and there.  These classes are most effective when the instructor
+critiques both the designs and the peer critiques, so that
+participants are learning not only how to make buildings, but how to
+give and get feedback \cite{bib:schon-practitioner}.  Master classes
+in music serve a similar purpose, and a few people have experimented
+with using live coding at conferences or online in similar ways.
+
+\end{callout}
 
 \begin{callout}{Tells}{callout:tells}
 
@@ -285,14 +302,19 @@ coach.
 
 \item
   Watch \href{https://www.youtube.com/watch?v=-ApVt04rB4U}{this video}
-  as a group and then give feedback on it. Try to organize feedback
-  along two axes: positive vs.\ negative and content vs.\
-  presentation.
+  as a group and then give feedback on it. Organize feedback along two
+  axes: positive vs.\ negative and content vs.\ presentation.
 
 \item
-  \fixme{add all feedback to the whiteboard}
+  Have each person in the class add one point to a $2{\times}2$ grid
+  on a whiteboard (or in the shared notes) without duplicating any
+  points that are already up there.
 
 \end{genumerate}
+
+\noindent
+What did other people see that you missed?  What did they think that
+you strongly agree or disagree with?
 
 \end{challenge}
 
