--- a/practices.tex
+++ b/practices.tex
@@ -287,7 +287,7 @@ even though it would be simpler to require learners to use just one.
 
 \fixme{Talk about getting learners' machines set up.}
 
-\begin{callout}{Virtual Machines}{callout:practices-vm}
+\begin{callout}{Virtual Machines}{callout:virtual-machines}
 
 We have experimented with virtual machines (VMs) on learners'
 computers to reduce installation problems, but those introduce
