--- a/memory.tex
+++ b/memory.tex
@@ -46,9 +46,13 @@ This metaphor helps explain many observed aspects of expert behavior:
   of why world-famous researchers are often poor lecturers.
 
 \item
-  Densely-connected knowledge graphs are also the basis for experts'
-  \emph{fluid representations}, i.e., their ability to switch back
-  and forth between different views of a problem.  \fixme{example}
+  Densely-connected knowledge graphs are also the basis for
+  experts' \emph{fluid representations}, i.e., their ability to switch
+  back and forth between different views of a problem
+  \cite{bib:petre-expertise}.  For example, when trying to solve a
+  problem in mathematics, we might switch between tackling it
+  geometrically and representing it as a set of equations to be
+  solved.
 
 \item
   Finally, this metaphor also explains why experts are better at
@@ -84,23 +88,47 @@ remembered.
 \begin{callout}{Repetition vs.\ Deliberate Practice}{callout:repetition-vs-deliberate-practice}
 
 The idea that ten thousand hours of practice will make someone an
-expert in some field is widely quoted, but reality is much more
-complex. First, doing exactly the same thing over and over again is
-much more likely to solidify bad habits than perfect performance.
-What actually works is \emph{deliberate practice}\footnote{Also
-sometimes called \emph{reflective practice}.}, which is doing similar
-but subtly different things, paying attention to what works and what
-doesn't, and then changing behavior in response to that feedback to
-get cumulatively better.
+expert in some field is widely quoted, but reality is more complex.
+Doing exactly the same thing over and over again is much more likely
+to solidify bad habits than perfect performance.  What actually works
+is \emph{deliberate practice}\footnote{Also sometimes called
+\emph{reflective practice}.}, which is doing similar but subtly
+different things, paying attention to what works and what doesn't, and
+then changing behavior in response to that feedback to get
+cumulatively better.
 
-Second, a meta-study conducted in 2014 \cite{bib:macnamara-deliberate}
-found that ``{\ldots}deliberate practice explained 26\% of the
-variance in performance for games, 21\% for music, 18\% for sports,
-4\% for education, and less than 1\% for professions.'' One
-explanation for this variation is that deliberate practice works best
-when the rules for evaluating success are very stable, but is less
-effective when there are more factors at play (i.e., when it's harder
-to connect cause to effect).
+A common progression is for people to go through three stages:
+
+\begin{enumerate}
+
+\item
+  They \emph{learn how to do something given feedback from others}.
+  For example, they might write an essay about what they did on their
+  summer holiday, and get feedback from a teacher telling them how to
+  improve it.
+
+\item
+  They \emph{learn how to give feedback}.  For example, they might
+  write an essay about character development in \emph{The Catcher in
+  the Rye}, and get feedback on their critique from a teacher.
+
+\item
+  They \emph{apply what they've learned about feedback to themselves}.
+  At some point, they start critiquing their own work in real time (or
+  nearly so) using the critical skills they've built up in steps 1 and
+  2.  Doing this is so much faster than waiting for feedback from
+  others that proficiency suddenly starts to take off.
+
+\end{enumerate}
+
+A meta-study conducted in 2014 \cite{bib:macnamara-deliberate} found
+that ``{\ldots}deliberate practice explained 26\% of the variance in
+performance for games, 21\% for music, 18\% for sports, 4\% for
+education, and less than 1\% for professions.'' One explanation for
+this variation is that deliberate practice works best when the rules
+for evaluating success are very stable, but is less effective when
+there are more factors at play (i.e., when it's harder to connect
+cause to effect).
 
 \end{callout}
 
@@ -118,12 +146,14 @@ that it makes those differences explicit.
 \begin{callout}{Externalizing Cognition}{callout:externalizing-cognition}
 
 Concept maps are just one way to represent our understanding of a
-subject.  For example, \href{fixme-abela}{this decision tree} presents
-a mental mode of how to choose the right kind of chart for different
-kinds of questions and data.  Maps, flowcharts, and blueprints can
-also be useful in some contexts.  What each does is \emph{externalize
-cognition}, i.e., make thought processes and mental models visible so
-that they can be compared, contrasted, and combined.
+subject.  For example, Andrew Abela's
+\href{http://extremepresentation.typepad.com/files/choosing-a-good-chart-09.pdf}{decision tree}
+presents a mental mode of how to choose the right kind of chart for
+different kinds of questions and data.  Maps, flowcharts, and
+blueprints can also be useful in some contexts.  What each does
+is \emph{externalize cognition}, i.e., make thought processes and
+mental models visible so that they can be compared, contrasted, and
+combined.
 
 \end{callout}
 
@@ -186,7 +216,10 @@ Concept maps can be used in many ways:
   what was missed and what was mis-understood.  However, reviewing
   learners' concept maps is too time-consuming for use in class, but
   very useful in weekly lectures \emph{once learners are familiar with
-  the technique}. \fixme{explain why}
+  the technique}.  The qualification is necessary because any new way
+  of doing things initially slows people down---if a student is trying
+  to make sense of basic economics, asking them to figure out how to
+  draw their thoughts at the same time is an unfair load.
 
 \end{genumerate}
 
@@ -348,5 +381,3 @@ detail? Which of the relationships in your partner's map do you
 consider concepts and vice versa?
 
 \end{challenge}
-
-\fixme{studio classes and learning how to give feedback}
