--- a/welcome.tex
+++ b/welcome.tex
@@ -89,18 +89,15 @@ versions of the course to people who wanted to help children, recent
 immigrants, women re-entering the workforce, and a wide variety of
 others.
 
-Those experiences are the basis of this book, but its roots go much
-deeper.  I am grateful, always, to Louis Biczo, Lon Taylor, Ken
-Douglas, and above all, my father, Rob Wilson, for starting me down
-this path.  I am also grateful to everyone who helped shape the
-Software Carpentry instructor training course, including Erin Becker,
-Karen Cranston, Neal Davis, Rayna Harris, Kate Hertweck, Christina
-Koch, Sue McClatchy, Lex Nederbragt, Elizabeth Patitsas, Aleksandra
-Pawlik, Ariel Rokem, Tracy Teal, Fiona Tweedie, Allegra Via, Anelda
-van der Walt, Belinda Weaver, Jason Williams, and the hundreds of
-people who went through it over the years.  I hope you enjoy what
-follows.  If you do, I hope you pass on whatever you find helpful to
-someone else.
+Those experiences are the basis of this book.  I am grateful to
+everyone who helped shape the Software Carpentry instructor training
+course, including Erin Becker, Karen Cranston, Neal Davis, Rayna
+Harris, Kate Hertweck, Christina Koch, Sue McClatchy, Lex Nederbragt,
+Elizabeth Patitsas, Aleksandra Pawlik, Ariel Rokem, Tracy Teal, Fiona
+Tweedie, Allegra Via, Anelda van der Walt, Belinda Weaver, Jason
+Williams, and the hundreds of people who went through it over the
+years.  I hope you enjoy what follows.  If you do, I hope you pass on
+whatever you find helpful to someone else.
 
 \seclbl{Teaching Practices}{sec:welcome-practices}
 
