--- a/welcome.tex
+++ b/welcome.tex
@@ -99,6 +99,33 @@ Williams, and the hundreds of people who went through it over the
 years.  I hope you enjoy what follows.  If you do, I hope you pass on
 whatever you find helpful to someone else.
 
+\begin{callout}{Who You Are}{callout:profiles}
+
+\secref{sec:learner-profiles} will explain how to use \emph{learner
+profiles} to define who a class is for.  Here, we present profiles of
+two typical participants in a workshop based on this book.
+
+\emph{Samira} is an undergraduate student in mechanical engineering
+who first encountered the subject in an after-school club for girls
+and would now like to pass on her love for it.  She has done one
+programming class and one robotics class, and has been a lab assistant
+for a couple of weekend introductions to engineering for high school
+students at her university, but doesn't know if she's ready to stand
+up and teaching.  This class will introduce her to some basic
+classroom practices and give her a chance to try them out in front of
+a supportive audience.
+
+\emph{Moshe} has been writing accounting software for almost twenty
+years.  His children's school doesn't offer a programming class, so he
+has volunteered to help put one together.  He has never written
+lessons before, and after reading a dozen different ``programming for
+kids'' books, is feeling more confused than ever.  This class will
+show him how to design and deliver lessons tailored for his students
+(many of whom have hearing disabilities), and how to tell how well
+those lessons are working.
+
+\end{callout}
+
 \seclbl{Teaching Practices}{sec:welcome-practices}
 
 This book can be read on its own, but it is more effective when used
