Moving all the teaching practices into one section

--- a/guide.tex
+++ b/guide.tex
@@ -283,7 +283,7 @@ This course has been taught as a multi-week online class, as a two-day
 in-person class, and as a two-day class in which the learners are in
 co-located groups and the instructor participates remotely.
 
-\seclbl{Multi-Week Online}{sec:multi-week-online-retired}
+\subseclbl{Multi-Week Online}{sec:multi-week-online-retired}
 
 This was the first format we used, and we no longer recommend it.
 
