--- a/novice.tex
+++ b/novice.tex
@@ -319,7 +319,7 @@ internet is an ever-increasing threat to its validity.
 \begin{callout}{We Know Less Than We Think}{callout:empirical-bugs}
 
 Brown and Altadmri's ``Investigating Novice Programming Mistakes:
-Educator Beliefs vs Student Data'' \cite{bib:brown-empiricao} compared
+Educator Beliefs vs Student Data'' \cite{bib:brown-empirical} compared
 teachers' opinions about common programming errors with data from over
 100,000 students, and finds only weak consensus amongst teachers and
 between teachers and data.
@@ -332,53 +332,23 @@ the learners' mental models and how they might be broken---in short,
 to put themselves into the learners' heads and see the topic from
 their point of view.
 
-\seclbl{Teaching Practices}{sec:novice-practices}
+\section*{Teaching Practices}{sec:novice-practices}
 
-Here are two more teaching practices that you can incorporate into
-any class (not just one on programming).
-
-\subseclbl{Sticky Notes}{sec:sticky-notes}
-
-Give each learner two sticky notes of different colours, e.g., red and
-green. These can be held up for voting, but their real use is as
-status flags. If someone has completed an exercise and wants it
-checked, they put the green sticky note on their laptop; if they run
-into a problem and need help, the put up the red one. This is better
-than having people raise their hands because:
+If you haven't done so already, you should start using these three
+teaching practices in your instructor training workshop:
 
 \begin{gitemize}
 
 \item
-  it's more discreet (which means they're more likely to
-  actually do it),
+  Use sticky notes as status flags (\secref{sec:practices-stickies}).
 
 \item
-  they can keep working while their flag is raised, and
+  Use sticky notes to distribute attention (\secref{sec:practices-attention}).
 
 \item
-  the instructor can quickly see from the front of the room what
-  state the class is in.
+  Use sticky notes as minute cards (\secref{sec:practices-minute-cards}).
 
 \end{gitemize}
-
-Sometimes a red sticky involves a technical problem that takes a bit
-more time to solve. To prevent this issue to slow down the whole class
-too much, you could use the occasion to take the small break you had
-planned to take a bit later, giving the helper(s) time to fix the
-problem.
-
-\subseclbl{Minute Cards}{sec:minute-cards}
-
-We frequently use sticky notes as \emph{minute cards}: before each
-break, learners take a minute to write one positive thing on the green
-sticky note (e.g., one thing they've learned that they think will be
-useful), and one thing they found too fast, too slow, confusing, or
-irrelevant on the red one. They can use the red sticky note for
-questions that haven't yet been answered. While they are enjoying
-their coffee or lunch, the instructors review and cluster these to
-find patterns. It only takes a few minutes to see what learners are
-enjoying, what they still find confusing, what problems they're
-having, and what questions are still unanswered.
 
 \seclbl{Challenges}{sec:novice-challenges}
 
