--- a/welcome.tex
+++ b/welcome.tex
@@ -126,230 +126,24 @@ those lessons are working.
 
 \end{callout}
 
-\seclbl{Teaching Practices}{sec:welcome-practices}
+\section*{Teaching Practices}
 
 This book can be read on its own, but it is more effective when used
-as part of an intensive in-person class.  Accordingly, we start by
-presenting three practices that you can use while taking such a class,
-as well as in the workshops you teach yourself.
-
-\subseclbl{Have a Code of Conduct}{sec:welcome-conduct}
-
-An important part of making a class productive is to treat everyone
-with respect.  We therefore strongly recommend that every group
-offering classes based on this material adopt a Code of Conduct like
-the one in \secref{sec:conduct}, and require people taking part in the
-class to abide by it.
-
-We believe equally strongly that your actual programming classes
-should also have and enforce a Code of Conduct.  Programming is a
-scary topic for many novices, and workshops are meant to be a judgment
-free space to learn and experiment. The behavior of the instructor and
-other participants may make more of an impression on a novice learner
-than any ``technical'' topic you teach.
-
-If you do this, hosts should point people at it during registration,
-and instructors should remind attendees of it at the start of the
-workshop. The Code of Conduct doesn't just tell everyone what the
-rules are: it tells them that there \emph{are} rules, and that they
-can therefore expect a safe and welcoming learning experience.
-
-If you are an instructor, and believe that someone in a workshop has
-violated the Code of Conduct, you may warn them, ask them to
-apologize, and/or expel them, depending on the severity of the
-violation and whether or not you believe it was intentional.  Whatever
-you do:
+as part of an intensive in-person class.  We suggest that workshops
+adopt these three practices right from the start:
 
 \begin{gitemize}
 
 \item
-  Do it in front of witnesses.  Most people will tone down their
-  language and hostility in front of an audience, and having someone
-  else present ensures that later discussion doesn't degenerate into
-  conflicting claims about who said what.
+  Have a code of conduct (\secref{sec:practices-conduct}).
 
 \item
-  Contact the organizer or host of your class as soon as you can and
-  describe what happened.  Remember, a Code of Conduct is meaningless
-  without a procedure for enforcing it.
+  Take notes together (\secref{sec:practices-notes}).
+
+\item
+  Assess learners' motivation and prior knowledge (\secref{sec:practices-assess}).
 
 \end{gitemize}
-
-A Code of Conduct cannot stop people from being offensive, any more
-than laws against theft stop people from stealing. What it \emph{can}
-do is make expectations and consequences clear.  In our experience,
-people rarely violate the Code of Conduct in person, though some are
-more likely to online, where they feel less inhibited.  And remember,
-a Code of Conduct is \emph{not} an infringement on free speech.
-People have a right to say what they think, but that doesn't mean they
-have a right to speak wherever and whenever they want.  If someone
-wishes to say something disparaging about someone else, they can go
-and find a space of their own in which to say it.
-
-\subseclbl{Take Notes Together}{sec:welcome-notes}
-
-Many studies have shown that taking notes while learning improves
-retention \cite{bib:aiken-note-taking,bib:bohay-note-taking}.  As we
-will discuss in \secref{sec:memory}, this happens because taking notes
-forces you to organize and reflect on material as it's coming in,
-which in turn increases the likelihood that you will transfer it to
-long-term memory in a usable way.
-
-Our experience, and some recent research findings, lead us to believe
-that taking notes \emph{collaboratively} helps learning even
-more \cite{bib:orndorff-note-taking}, even though taking notes on a
-computer is generally less effective than taking notes using pen and
-paper \cite{bib:mueller-note-taking}.  Taking notes collaboratively:
-
-\begin{gitemize}
-
-\item
-  It allows people to compare what they think they're hearing with
-  what other people are hearing, which helps them fill in gaps and
-  correct misconceptions right away.
-
-\item
-  It gives the more advanced learners in the class something useful to
-  do.  Rather than getting bored and checking Twitter during class,
-  they often take the lead in recording what's being said, which keeps
-  them engaged, and allows less advanced learners to focus more of
-  their attention on new material.  Keeping the more advanced learners
-  busy also helps the whole class stay engaged because boredom is
-  infectious: if a handful of people start updating their Facebook
-  profiles, the people around them will start checking out too.
-
-\item
-  The notes the learners take are usually more helpful \emph{to them}
-  than those the instructor would prepare in advance, since the learners
-  are more likely to write down what they actually found new, rather than
-  what the instructor predicted would be new.
-
-\item
-  Glancing at the notes as they're being taken helps the instructor
-  discover that the class didn't hear something important, or
-  misunderstood it.
-
-\end{gitemize}
-
-We usually use \href{http://etherpad.org}{Etherpad} for collaborative
-note-taking, though many instructors have shifted to
-\href{https://docs.google.com}{Google Docs}, both because it scales
-better and because it allows people to add images to the notes.
-Whichever is chosen, classes also use it to share snippets of code and
-small datasets, and as a way for learners to show instructors their
-work (by copying and pasting it in).
-
-Shared note-taking is almost always mentioned positively in
-post-workshop feedback.  However, it's also common for participants to
-report that they find it distracting, as it's one more thing they have
-to keep an eye on.  We believe the positives outweigh the negatives,
-but think that some careful controlled studies would tell us whether
-we're right, and how to use it better.
-
-\subseclbl{Assess Learners' Motivation and Prior Knowledge}{sec:welcome-assess}
-
-It's important to design lessons with a particular audience in mind.
-It's equally important to find out who's in each specific audience,
-since this will influence how you introduce yourself, motivate topics,
-and pace the lessons.  Before the start of a Software Carpentry
-instructor training class, we ask people to fill in a short
-questionnaire like the one below.  It doesn't tell us everything we
-might want to know, but it does give trainers a pretty clear idea of
-who they're speaking to.
-
-\begin{genumerate}
-
-\item
-  Have you ever participated in a Software Carpentry or Data Carpentry
-  workshop? (Check all that apply.)
-
-  \begin{todolist}
-  \item
-    Yes, as a learner.
-  \item
-    Yes, as a helper.
-  \item
-    Yes, as an organizer.
-  \item
-    Yes, as an instructor.
-  \item
-    No, but I am familiar with what is taught at a workshop.
-  \item
-    No, and I am not familiar with what is taught at a workshop.
-  \end{todolist}
-
-\item
-  Which of these describes your teaching experience?  (Check all that
-  apply.)
-
-  \begin{todolist}
-  \item
-    I have none.
-  \item
-    I have taught a seminar, workshop, or other short or informal course.
-  \item
-    I have been a graduate or undergraduate teaching assistant for a
-    college- or university-level course.
-  \item
-    I have been the instructor-of-record for a college- or
-    university-level course.
-  \item
-    I have taught at the K-12 level.
-  \end{todolist}
-
-\item
-  Which of these describes your previous formal training in teaching?
-  (Please choose only one.)
-
-  \begin{todolist}
-  \item
-    None
-  \item
-    A few hours
-  \item
-    A workshop
-  \item
-    A certification or short course
-  \item
-    A full degree
-  \end{todolist}
-
-\item
-  How frequently do you work with the tools that Data Carpentry and
-  Software Carpentry teach, such as R, Python, MATLAB, Perl, SQL, Git,
-  OpenRefine, and the Unix Shell?
-
-  \begin{todolist}
-  \item
-    Every day
-  \item
-    A few times a week
-  \item
-    A few times a month
-  \item
-    A few times a year
-  \item
-    Never or almost never
-  \end{todolist}
-
-\item
-  How often would you expect to teach on Software or Data Carpentry
-  Workshops after this training?
-
-  \begin{todolist}
-  \item
-    Not at all
-  \item
-    Once a year
-  \item
-    Several times a year
-  \end{todolist}
-
-\item
-  Why do you want to take this training course?\\
-  \line(1,0){275}
-
-\end{genumerate}
 
 \seclbl{Challenges}{sec:welcome-challenges}
 
@@ -357,14 +151,5 @@ who they're speaking to.
 
 In the online notes, write down your name, the best class you ever
 took, and what made it so great.
-
-\end{challenge}
-
-\begin{challenge}{Create a Questionnaire}{chal:favorite-class}
-
-Using the questionnaire in \secref{sec:welcome-assess} as a template,
-create a short questionnaire you could give learners before teaching a
-class of your own.  What do you most want to know about their
-background?
 
 \end{challenge}
