Consolidating more teaching practices

--- a/motivation.tex
+++ b/motivation.tex
@@ -212,7 +212,7 @@ The Ada Initiative has
 excellent resources} for teaching about and dealing with imposter
 syndrome.
 
-\subseclbl{Stereotype Threat}{sec:stereotype-threat}
+\seclbl{Stereotype Threat}{sec:stereotype-threat}
 
 Reminding people of negative stereotypes, even in subtle ways, makes
 them anxious about the risk of confirming those stereotypes, which in
@@ -421,25 +421,10 @@ be applied in our workshops:
 
 \end{gitemize}
 
-\seclbl{Teaching Practices}{sec:motivation-practices}
-
-\subseclbl{Think-Pair-Share}{sec:think-pair-share}
-
-Think-pair-share is a lightweight technique that helps refine their
-ideas and compare them with others'.  Each person starts by thinking
-individually about a question or problem and jotting down a few notes.
-Participants are then paired to explain their ideas to each another,
-and possibly to merge them or select the more interesting ones.
-Finally, a few pairs present their ideas to the whole group.
-
-Think-pair-share works because, to paraphrase Oscar Wilde's Lady
-Windermere, people often can't know what they're thinking until
-they've heard themselves say it.  Pairing gives people new insight
-into their own thinking, and forces them to think through and resolve
-any gaps or contradictions \emph{before} exposing their ideas to a
-larger group.
-
 \seclbl{Challenges}{sec:motivation-challenges}
+
+Several of these challenges use ``think-pair-share''.  If you have
+not already covered this, please look at \secref{sec:practices-tps} now.
 
 \begin{challenge}{Authentic Tasks}{chal:authentic-tasks}
 
