--- a/practices.tex
+++ b/practices.tex
@@ -410,6 +410,22 @@ online video. This model has worked well for this instructor training
 course, and for a handful of regular workshops, but more work is
 needed to figure out its pros and cons.
 
+\subseclbl{Think-Pair-Share}{sec:practices-tps}
+
+Think-pair-share is a lightweight technique that helps refine their
+ideas and compare them with others'.  Each person starts by thinking
+individually about a question or problem and jotting down a few notes.
+Participants are then paired to explain their ideas to each another,
+and possibly to merge them or select the more interesting ones.
+Finally, a few pairs present their ideas to the whole group.
+
+Think-pair-share works because, to paraphrase Oscar Wilde's Lady
+Windermere, people often can't know what they're thinking until
+they've heard themselves say it.  Pairing gives people new insight
+into their own thinking, and forces them to think through and resolve
+any gaps or contradictions \emph{before} exposing their ideas to a
+larger group.
+
 \seclbl{Challenges}{sec:practices-challenges}
 
 \begin{challenge}{Create a Questionnaire}{chal:favorite-class}
