--- a/literature.bib
+++ b/literature.bib
@@ -17,6 +17,7 @@
   publisher={Jossey-Bass},
   year={2010},
   isbn={0470484101},
+  url={https://www.amazon.com/How-Learning-Works-Research-Based-Principles/dp/0470484101/},
   annotate={An excellent overview of what we know about education and why we believe
     it's true, covering everything from cognitive psychology to social
     factors.}
@@ -51,6 +52,7 @@
   publiser={Pearson},
   year={2000},
   isbn={978-0130325228},
+  url={https://www.amazon.com/Novice-Expert-Excellence-Clinical-Commemorative/dp/0130325228/},
   annotate={A classic study of clinical judgment and how expertise develops.}
 }
 
@@ -81,19 +83,21 @@
 @book{bib:epstein-thinking-physics,
   author={L.C. Epstein},
   title={Thinking Physics is Gedanken Physics},
-  isbn={9780935218084},
-  year={2002},
   publisher={Insight Press},
+  year={2002},
+  isbn={9780935218084},
+  url={https://www.amazon.com/Thinking-Physics-Understandable-Practical-Reality/dp/0935218084/},
   annotate={An entertaining problem-based introduction to thinking like a physicist.}
 }
 
 @book{bib:fehily-sql,
   author={Chris Fehily},
   title={SQL: Visual QuickStart Guide},
-  edition={3},
   publisher={Peachpit Press},
   year={2008},
+  edition={3},
   isbn={978-0321553577},
+  url={https://www.amazon.com/SQL-Visual-QuickStart-Guide-3rd/dp/0321553578/},
   annotate={An introduction to SQL that is both a good tutorial and a good reference guide.}
 }
 
@@ -145,9 +149,10 @@
 @book{bib:green-babt,
   author={E. Green},
   title={Building a Better Teacher: How Teaching Works (and How to Teach It to Everyone)},
-  isbn={9780393244151},
-  year={2014},
   publisher={W. W. Norton},
+  year={2014},
+  isbn={9780393244151},
+  url={https://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393351084/},
   annotate={A well-written look at why educational reforms in the past
    50 years have mostly missed the mark, and what we should be doing instead.}
 }
@@ -166,6 +171,7 @@
   publisher={Morgan \& Claypool},
   year={2015},
   isbn={978-1627053518},
+  url={https://www.amazon.com/Learner-Centered-Design-Computing-Education-Human-Centered/dp/1627053514/},
   annotate={An evidence-based argument that we must design computing education for everyone,
     not just people who think they are going to become full-time professional programmers.}
 }
@@ -206,6 +212,7 @@
   publisher={Harvard University Press},
   year={2009},
   isbn={978-0674035805},
+  url={https://www.amazon.com/Teaching-What-You-Dont-Know/dp/0674035801/},
   annotate={A pointed, funny, and very useful book that explores exactly what the
     title suggests.}
 }
@@ -213,29 +220,32 @@
 @book{bib:kernighan-plauger-elements,
   author={Brian W. Kernighan and P.J. Plauger},
   title={The Elements of Programming Style},
-  year={1982},
-  isbn={0070342075},
-  edition={2nd},
   publisher={McGraw-Hill, Inc.},
+  year={1982},
+  edition={2nd},
+  isbn={0070342075},
+  url={https://www.amazon.com/Elements-Programming-Style-2nd/dp/0070342075/},
   annotate={An early and influential description of the Unix programming philosophy.}
 }
 
 @book{bib:kernighan-pike-upe,
   author={Brian W. Kernighan and Rob Pike},
   title={The UNIX Programming Environment},
+  publisher={Prentice Hall Professional Technical Reference},
   year={1984},
   isbn={013937681X},
-  publisher={Prentice Hall Professional Technical Reference},
+  url={https://www.amazon.com/Unix-Programming-Environment-Prentice-Hall-Software/dp/013937681X/},
   annotate={An influential early description of Unix.}
 }
 
 @book{bib:kernighan-ritchie-c,
   author={Brian W. Kernighan and Dennis M. Ritchie},
   title={The  C Programming Language},
-  year={1988},
-  isbn={0131103709},
-  edition={2nd},
   publisher={Prentice Hall Professional Technical Reference},
+  year={1988},
+  edition={2nd},
+  isbn={0131103709},
+  url={https://www.amazon.com/Programming-Language-Brian-W-Kernighan/dp/0131103628/},
   annotate={The book that made C a popular programming language.}
 }
 
@@ -270,6 +280,7 @@
   publisher={Jossey-Bass},
   year={2016},
   isbn={978-1118944493},
+  url={https://www.amazon.com/Small-Teaching-Everyday-Lessons-Learning/dp/1118944496/},
   annotate={Presents a selection of accessible evidence-based practices that teachers can adopt
     when they little time and few resources.}
 }
@@ -289,6 +300,7 @@
   year={2014},
   edition={2},
   isbn={978-1118901854},
+  url={https://www.amazon.com/Teach-Like-Champion-2-0-Techniques/dp/1118901851/},
   annotate={Presents 62 classroom techniques drawn from intensive study of thousands
     of hours of video of good teachers in action.}
 }
@@ -296,9 +308,10 @@
 @book{bib:littky-big-picture,
   title={The Big Picture: Education is Everyone's Business},
   author={D. Littky and S. Grabelle},
-  isbn={9780871209719},
-  year={2004},
   publisher={Association for Supervision and Curriculum Development},
+  year={2004},
+  isbn={9780871209719},
+  url={https://www.amazon.com/Big-Picture-Education-Everyones-Business/dp/0871209713/},
   annotate={A personal exploration of the purpose of education and how to make schools better.}
 }
 
@@ -318,9 +331,10 @@
 @book{bib:margolis-fisher-clubhouse,
   author={J. Margolis and A. Fisher},
   title={Unlocking the Clubhouse: Women in Computing},
-  isbn={9780262632690},
-  year={2003},
   publisher={MIT Press},
+  year={2003},
+  isbn={9780262632690},
+  url={https://www.amazon.com/Unlocking-Clubhouse-Women-Computing-Press/dp/0262632691/},
   annotate={A groundbreaking report on the gender imbalance in computing, and the
     steps Carnegie-Mellon took to address the problem.}
 }
@@ -328,9 +342,10 @@
 @book{bib:margolis-shallow,
   author={J. Margolis and R. Estrella and J. Goode and J.J. Holme and K. Nao},
   title={Stuck in the Shallow End: Education, Race, and Computing},
-  isbn={9780262260961},
-  year={2010},
   publisher={MIT Press},
+  year={2010},
+  isbn={9780262260961},
+  url={https://www.amazon.com/Stuck-Shallow-End-Education-Computing/dp/0262514044/},
   annotate={A hard-hitting look at racial inequities in computing education.}
 }
 
@@ -390,6 +405,7 @@
   publisher={MIT Press},
   year={2016},
   isbn={978-0262035187},
+  url={https://www.amazon.com/Software-Design-Decoded-Experts-Think/dp/0262035189/},
   annotate={A short illustrated overview of how expert software developers think.}
 }
 
@@ -416,16 +432,18 @@
   publisher={Jossey-Bass},
   year={2016},
   isbn={978-1119049715},
+  url={https://www.amazon.com/Discussion-Book-Great-People-Talking/dp/1119049717/},
   annotate={Describes fifty different ways to get groups talking productively.}
 }
 
 @book{bib:ray-ray-unix,
   author={Eric J. Ray and Deborah S. Ray},
   title={Unix and Linux: Visual QuickStart Guide},
-  edition={5},
   publisher={Peachpit Press},
   year={2014},
+  edition={5},
   isbn={978-0321997548},
+  url={https://www.amazon.com/Unix-Linux-Visual-QuickStart-Guide/dp/0321997549/},
   annotate={An introduction to Unix that is both a good tutorial and a good reference guide.}
 }
 
@@ -435,15 +453,17 @@
   publisher={Basic Books},
   year={1984},
   isbn={978-0465068784},
+  url={https://www.amazon.com/Reflective-Practitioner-Professionals-Think-Action/dp/0465068782/},
   annotate={A groundbreaking look at how professionals in different fields actually solve problems.}
 }
 
 @book{bib:scott-state,
   title={Seeing Like a State: How Certain Schemes to Improve the Human Condition Have Failed},
   author={Scott, J.C.},
-  isbn={9780300128789},
-  year={1999},
   publisher={Yale University Press},
+  year={1999},
+  isbn={9780300128789},
+  url={https://www.amazon.com/Seeing-like-State-Certain-Condition/dp/0300078153/},
   annotate={Presents a compelling case that centrally-managed, top-down ventures
     will always be less effective than grassroots alternatives because large
     organizations consistently prefer uniformity over productivity.}
@@ -452,9 +472,10 @@
 @book{bib:steele-vivaldi,
   author={C.M. Steele},
   title={Whistling Vivaldi: And Other Clues to How Stereotypes Affect Us (Issues of Our Time)},
-  isbn={9780393341485},
-  year={2011},
   publisher={W. W. Norton},
+  year={2011},
+  isbn={9780393341485},
+  url={https://www.amazon.com/Whistling-Vivaldi-Stereotypes-Affect-Issues/dp/0393339726/},
   annotate={Explains and explores stereotype threat and strategies for addressing it.}
 }
 
@@ -471,8 +492,9 @@
 @book{bib:wiggins-mctighe,
   author={G.P. Wiggins and J. McTighe},
   title={Understanding by Design},
-  isbn={9781416600350},
-  year={2005},
   publisher={Association for Supervision and Curriculum Development},
+  year={2005},
+  isbn={9781416600350},
+  url={https://www.amazon.com/Understanding-Design-Grant-Wiggins/dp/1416600353/},
   annotate={A lengthy presentation of reverse instructional design.}
 }
